@startuml
class Bicycle {
+ void start()
+ void stop()
+ void accelerate()
}

class Car {
+ void start()
+ void stop()
+ void accelerate()
}

abstract class Vehicle {
+ {abstract}void start()
+ {abstract}void stop()
+ {abstract}void accelerate()
}

class Motorcycle {
+ void start()
+ void stop()
+ void accelerate()
}



Vehicle <|-- Bicycle
Vehicle <|-- Car
Vehicle <|-- Motorcycle
@enduml